--- a/test-server/Dockerfile
+++ b/test-server/Dockerfile
@@ -1,5 +1,7 @@
 FROM node
-COPY server.js /
+COPY . /server
 # 不拷贝file目录，而是通过运行的时候挂载卷
+WORKDIR /server
+RUN npm install
 EXPOSE 3000
-CMD node server.js
+CMD node index.js
